syntax = "proto3";

package shared.infoservicepb.v1;

option go_package = "wz2100.net/microlobby/shared/proto/infoservicepb/v1;infoservicepb";

import "google/protobuf/empty.proto";

service InfoService {
    rpc Health (google.protobuf.Empty) returns (HealthReply) {}
    rpc Routes (google.protobuf.Empty) returns (RoutesReply) {}
}

message RoutesReply {
    message Route {
        // No Roles = no Auth
	    // GlobalRoute = no prefix route
        bool globalRoute = 1;
        string method = 2;
        string path = 3;
        string endpoint = 4;
        string preEndpoint = 5;
        string postEndpoint = 6;
        string requireRole = 7;
        repeated string params = 8;
        repeated string intersectsRoles = 9;
    }

    string proxyURI = 1;
    string apiVersion = 2;
    repeated Route routes = 3;
}

message HealthReply {
    message HealthInfo {
        string message = 1;
        bool isError = 2;
    }

    map<string, HealthInfo> infos = 1;
    bool hasError = 2;
}